fix: avoid horizontal overflow in settings

--- a/src/layouts/app-layout.module.css
+++ b/src/layouts/app-layout.module.css
@@ -17,6 +17,6 @@
 }
 
 .footer {
+  padding-top: 0.5rem;
   flex: 0 0 auto;
-  padding-bottom: 0.5rem;
 }
